--- a/404.html
+++ b/404.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="" />
+  	<meta name="keywords" content="" />
+  	<meta name="author" content="Rogatnev Nikita" />
+  	
+	<title>Responsive Animated 404 Pages</title>
+	<!-- Connect favicon.ico and apple-touch-icon.png here -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="./styles/main.css" />
+</head>
+
+<body>
+
+    <main class="">
+        <h1>ERROR 404 NOT FOUND</h1>
+        
+        <div class="">
+            <a href="#"><i class="fa fa-"></a>
+            <a href="#"><i class="fa fa-"></a>
+            <a href="#"><i class="fa fa-"></a>
+            <a href="#"><i class="fa fa-"></a>
+        </div>
+    </main>
+
+</body>
+</html>
