--- a/404.html
+++ b/404.html
@@ -16,14 +16,19 @@
 
 <body>
 
-    <main class="">
-        <h1>ERROR 404 NOT FOUND</h1>
+    <main class="error">
+        <h1 class="error__heading"><span>ERROR 404</span> NOT FOUND</h1>
+        <p class="error__description">The page you are looking for is temporarily unavailable. Please try again later.</p>
         
-        <div class="">
-            <a href="#"><i class="fa fa-"></a>
-            <a href="#"><i class="fa fa-"></a>
-            <a href="#"><i class="fa fa-"></a>
-            <a href="#"><i class="fa fa-"></a>
+        <div class="error__buttons">
+            <a href="#" class="error__button">HOME</a>
+            <a href="#" class="error__button">CONTACT US</a>
+        </div>
+        
+        <div class="error__socials">
+            <a href="#" class="error__social"><i class="fa fa-paper-plane"></i></a>
+            <a href="#" class="error__social"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="error__social"><i class="fa fa-twitter"></i></a>
         </div>
     </main>
 
