--- a/404.html
+++ b/404.html
@@ -16,9 +16,15 @@
 
 <body>
 
+	<!-- EYES -->
+    <div class="eyes" id="eyes">
+        <canvas></canvas>
+    </div>
+	<!-- EYES END -->
+
 	<!-- MAIN CONTENT -->
     <main class="error">
-        <h1 class="error__heading"><span>ERROR 404</span> NOT FOUND</h1>
+        <h1 class="error__heading"><span>ERROR 404</span> You shouldn't be here</h1>
         <p class="error__description">The page you are looking for is temporarily unavailable. Please try again later.</p>
         
         <div class="error__buttons">
@@ -59,6 +65,7 @@
 	<!-- SCRIPTS -->
 	<script src="./scripts/jquery.js"></script>
 	<script src="./scripts/main.js"></script>
+	<script src="./scripts/eyes.js"></script>
 	<!-- SCRIPTS END -->
 
 </body>
