--- a/404.html
+++ b/404.html
@@ -26,12 +26,12 @@
     <main class="error">
         <h1 class="error__heading"><span>ERROR 404</span> You shouldn't be here</h1>
         <p class="error__description">The page you are looking for is temporarily unavailable. Please try again later.</p>
-        
+
         <div class="error__buttons">
             <a href="#" class="error__button">HOME</a>
-            <button class="error__button modal--open">CONTACT US</button>
+            <a href="#" class="error__button modal--open">CONTACT US</a>
         </div>
-        
+
         <div class="error__socials">
             <a href="#" class="error__social fa fa-paper-plane"></a>
             <a href="#" class="error__social fa fa-facebook"></a>
