--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="" />
-  	<meta name="keywords" content="" />
+  	<meta name="keywords" content="error, error page, 404, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops" />
   	<meta name="author" content="Rogatnev Nikita" />
   	
-	<title>Responsive Animated 404 Pages</title>
+	<title>Responsive Animated 404 Page</title>
 	<!-- Connect favicon.ico and apple-touch-icon.png here -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="./styles/main.css" />
