--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="The eye is an efficient 404 responsive Page with 2 color schemes. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…" />
+	<meta name="description" content="The eye is an efficient 404 responsive Page. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…" />
   	<meta name="keywords" content="error, error page, 404, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops" />
   	<meta name="author" content="Rogatnev Nikita" />
   	
