--- a/html/404.html
+++ b/html/404.html
@@ -49,7 +49,7 @@
                 <div class="modal__content">
                     <h2>REPORT FORM</h2>
                     <form action="#" class="modal__form">
-                        <input type="text" name="email" placeholder="Your Email" \>
+                        <input type="text" name="email" placeholder="Your email" \>
                         <textarea name="text" placeholder="You feedback about the problem here..."></textarea>
                         <button>SEND</button>
                     </form>
