--- a/html/404.html
+++ b/html/404.html
@@ -63,9 +63,9 @@
 	<!-- MODAL BOX END -->
 
 	<!-- SCRIPTS -->
-	<script src="./scripts/jquery.js"></script>
-	<script src="./scripts/main.js"></script>
-	<script src="./scripts/eyes.js"></script>
+	<script src="./scripts/jquery.js" async></script>
+	<script src="./scripts/main.js" async></script>
+	<script src="./scripts/eyes.js" async></script>
 	<!-- SCRIPTS END -->
 
 </body>
