--- a/html/404.html
+++ b/html/404.html
@@ -44,8 +44,9 @@
     <section class="modal">
         <div class="modal__box">
 		    <div class="modal__inset">
-      			<div class="modal__close"><i class="fa fa-close"></i></div>
-	
+      			<div class="modal__close">
+      			   <i class="fa fa-close"></i>
+                </div>
                 <div class="modal__content">
                     <h2>REPORT FORM</h2>
                     <form action="#" class="modal__form">
@@ -55,7 +56,6 @@
                     </form>
                     <small>* This gives you first hand information about your broken links from your users and also a chance to build a rapport with the user via email.</small>
       			</div>
-      			
     		</div>
         </div>
     </section>
