--- a/documentation/index.html
+++ b/documentation/index.html
@@ -115,17 +115,16 @@
 			<h2>Javascript</h2>
             <ul>
                 <li>
-                    <strong><a href="https://github.com/alvarotrigo/fullPage.js" target="_blank">jquery.fullPage.js</a></strong>
-                    A simple and easy to use plugin to create fullscreen scrolling websites.<br>
-                    It allows the creation of fullscreen scrolling websites, as well as adding some landscape sliders inside the sections of the site.
-                </li>
-                <li>
                     <strong><a href="https://jquery.com" target="_blank">jQuery</a></strong>
                     jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
                 </li>
                 <li>
                     <strong>main.js</strong>
-                    Contents javascripts code to initialize other js plugins present in vendor.js and plugins.js
+                    Contents javascripts code to initialize other js plugins and scripts.
+                </li>
+                <li>
+                    <strong>eyes.js</strong>
+                    The main script to draw eye on canvas.
                 </li>
             </ul>
 		</section>
