--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2,52 +2,52 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="The eye is an efficient 404 responsive Page. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…" />
-	<meta name="keywords" content="error, error page, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops" />
-	<meta name="author" content="Rogatnev Nikita" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The eye is an efficient 404 responsive Page. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…" />
+    <meta name="keywords" content="error, error page, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops" />
+    <meta name="author" content="Rogatnev Nikita" />
 
-	<title>The eye - Responsive Animated 404 Page | Documentation page</title>
-	<link rel="stylesheet" href="./styles/main.css" />
+    <title>The eye - Responsive Animated 404 Page | Documentation page</title>
+    <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
 <body>
 
-	<!-- MENU -->
-	<aside class="aside">
-	
+    <!-- MENU -->
+    <aside class="aside">
+
         <!-- EYES -->
         <div class="eyes" id="eyes">
             <canvas></canvas>
         </div>
         <!-- EYES END -->
-        
-		<ul id="document_nav">
-			<li><a href="#start">Start</a></li>
-			<li><a href="#overview">Theme Overview</a></li>
-			<li><a href="#file">File Structure</a></li>
-			<li><a href="#css-str">CSS Structure</a></li>
-			<li><a href="#icon-usage">Icon Usage</a></li>
-			<li><a href="#java">Javascript</a></li>
-			<li><a href="#source">Sources and Credits</a></li>
-		</ul>
-	</aside>
-	<!-- MENU END -->
 
-	<!-- MAIN CONTAINER -->
-	<main class="main-wrapper">
+        <ul id="document_nav">
+            <li><a href="#start">Start</a></li>
+            <li><a href="#overview">Theme Overview</a></li>
+            <li><a href="#file">File Structure</a></li>
+            <li><a href="#css-str">CSS Structure</a></li>
+            <li><a href="#icon-usage">Icon Usage</a></li>
+            <li><a href="#java">Javascript</a></li>
+            <li><a href="#source">Sources and Credits</a></li>
+        </ul>
+    </aside>
+    <!-- MENU END -->
 
-		<!-- INTRO -->
-		<section class="intro" id="start">
-			<h2>The eye - Responsive Animated 404 Page | Documentation page</h2>
-		</section>
-		<!-- INTRO END -->
+    <!-- MAIN CONTAINER -->
+    <main class="main-wrapper">
 
-		<!-- THEME OVERVIEW -->
-		<section class="theme-overview" id="overview">
-			<h2>Theme Overview</h2>
-			<p>The eye is an efficient 404 responsive Page. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…</p>
+        <!-- INTRO -->
+        <section class="intro" id="start">
+            <h2>The eye - Responsive Animated 404 Page | Documentation page</h2>
+        </section>
+        <!-- INTRO END -->
+
+        <!-- THEME OVERVIEW -->
+        <section class="theme-overview" id="overview">
+            <h2>Theme Overview</h2>
+            <p>The eye is an efficient 404 responsive Page. Clean, classy and elegant for every creative people, corporates, agency, e-commerce, business, portfolio etc…</p>
 
             <strong>Summary</strong>
             <ul>
@@ -60,14 +60,14 @@
                 <li>Category: Specialty Pages / 404 Pages</li>
                 <li>Tags: error, error page, 404, creative, clean, modern, minimal, animated, responsive, dark, oh no, oops</li>
             </ul>
-		</section>
-		<!-- THEME OVERVIEW END -->
+        </section>
+        <!-- THEME OVERVIEW END -->
 
-		<!-- FILE STRUCTURE-->
-		<section class="file-structure" id="file">
-			<h2>File Structure</h2>
-			<p>When you download The eye - Responsive Animated 404 Page theme folder you'll see something like this:</p>
-			<pre>
+        <!-- FILE STRUCTURE-->
+        <section class="file-structure" id="file">
+            <h2>File Structure</h2>
+            <p>When you download The eye - Responsive Animated 404 Page theme folder you'll see something like this:</p>
+            <pre>
     ROOT FOLDER
     +-- scripts /
     ¦  +-- eyes.js
@@ -76,23 +76,23 @@
     +-- styles /
     ¦    +-- main.css
     +-- 404.html</pre>
-		</section>
-		<!-- FILE STRUCTURE END -->
+        </section>
+        <!-- FILE STRUCTURE END -->
 
-		<!-- CSS STRUCTURE -->
-		<section id="css-str">
-			<h2>CSS Structure</h2>
-			<p>CSS structured in this template are as follows:</p>
+        <!-- CSS STRUCTURE -->
+        <section id="css-str">
+            <h2>CSS Structure</h2>
+            <p>CSS structured in this template are as follows:</p>
             <pre>
     /*  01 - GENERAL STYLES  */
     /*  02 - MODAL BOX  */
     /*  03 - ANIMATIONS  */</pre>
-		</section>
-		<!-- CSS STRUCTURE END -->
+        </section>
+        <!-- CSS STRUCTURE END -->
 
-		<!-- ICON USAGE -->
-		<section id="icon-usage">
-			<h2>Icon Usage</h2>
+        <!-- ICON USAGE -->
+        <section id="icon-usage">
+            <h2>Icon Usage</h2>
             <p>Font based icon set FontAwesome are used in this template. Hence the size and color of the icons can be controlled through css. View <a href="http://fortawesome.github.io/Font-Awesome/icons/">here</a> the full list of icons used.</p>
             <pre>
     &lt;i class="fa fa-google-plus"&gt;&lt;/i&gt;
@@ -107,62 +107,59 @@
             <p>Icons are connected with the following code into the &lt;head&gt; section:</p>
             <pre>
     &lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"&gt;</pre>
-		</section>
-		<!-- ICON USAGE END -->
+        </section>
+        <!-- ICON USAGE END -->
 
-		<!-- JAVASCRIPT -->
-		<section id="java">
-			<h2>Javascript</h2>
+        <!-- JAVASCRIPT -->
+        <section id="java">
+            <h2>Javascript</h2>
             <ul>
                 <li>
-                    <strong><a href="https://jquery.com" target="_blank">jQuery</a></strong>
-                    jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
+                    <strong><a href="https://jquery.com" target="_blank">jQuery</a></strong> jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax
+                    much simpler with an easy-to-use API that works across a multitude of browsers.
                 </li>
                 <li>
-                    <strong>main.js</strong>
-                    Contents javascripts code to initialize other js plugins and scripts.
+                    <strong>main.js</strong> Contents javascripts code to initialize other js plugins and scripts.
                 </li>
                 <li>
-                    <strong>eyes.js</strong>
-                    The main script to draw eye on canvas.
+                    <strong>eyes.js</strong> The main script to draw eye on canvas.
                 </li>
             </ul>
-		</section>
-		<!-- JAVASCRIPT END -->
+        </section>
+        <!-- JAVASCRIPT END -->
 
-		<!-- SOURCES & CREDITS -->
-		<section id="source">
-			<h2>Sources & Credits</h2>
-			<ul>
+        <!-- SOURCES & CREDITS -->
+        <section id="source">
+            <h2>Sources & Credits</h2>
+            <ul>
                 <li>
-                    <strong>Font Awesome</strong>
-                    font-awesome.min.css v4.5.0<br>
-                    Copyright © Dave Gandy<br>
-                    Licensed under MIT (<a href="http://fontawesome.io/license/" target="_blank">http://fontawesome.io/license/</a>)
-                </li>                
-                <li>
-                    <strong>jQuery</strong>
-                    jquery.min.js v3.0.0-beta1<br>
-                    Licensed under MIT (<a href="https://jquery.org/license/" target="_blank">https://jquery.org/license/</a>)
+                    <strong>Font Awesome</strong> font-awesome.min.css v4.5.0
+                    <br> Copyright © Dave Gandy
+                    <br> Licensed under MIT (<a href="http://fontawesome.io/license/" target="_blank">http://fontawesome.io/license/</a>)
                 </li>
                 <li>
-                    <strong>eyes.js</strong>
-                    Copyright (C) 2011 Hakim El Hattab, (<a href="http://hakim.se" target="_blank">http://hakim.se</a>)
+                    <strong>jQuery</strong> jquery.min.js v3.0.0-beta1
+                    <br> Licensed under MIT (<a href="https://jquery.org/license/" target="_blank">https://jquery.org/license/</a>)
                 </li>
-			</ul>
-            <p class="autor">Regards,<br><a href="http://www.rogatnev.ru" target="_blank">Rogatnev Nikita</a></p>
+                <li>
+                    <strong>eyes.js</strong> Copyright (C) 2011 Hakim El Hattab, (<a href="http://hakim.se" target="_blank">http://hakim.se</a>)
+                </li>
+            </ul>
+            <p class="autor">Regards,
+                <br><a href="http://www.rogatnev.ru" target="_blank">Rogatnev Nikita</a></p>
             <p class="copy">&copy; 2016 The eye - Responsive Animated 404 Page Template</p>
-		</section>
-		<!-- DEMO CONTENT CLOSE -->
+        </section>
+        <!-- DEMO CONTENT CLOSE -->
 
-	</main>
-	<!-- MAIN CONTAINER -->
+    </main>
+    <!-- MAIN CONTAINER -->
 
-	<!-- SCRIPTS -->
-	<script src="./scripts/jquery.js"></script>
-	<script src="./scripts/main.js"></script>
-	<script src="./scripts/eyes.js"></script>
-	<!-- SCRIPTS END -->
-	
+    <!-- SCRIPTS -->
+    <script src="./scripts/jquery.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/eyes.js"></script>
+    <!-- SCRIPTS END -->
+
 </body>
+
 </html>
