--- a/html/404.html
+++ b/html/404.html
@@ -29,7 +29,7 @@
 
         <div class="error__buttons">
             <a href="#" class="error__button">HOME</a>
-            <a href="#" class="error__button modal--open">CONTACT US</a>
+            <a class="error__button modal--open">CONTACT US</a>
         </div>
 
         <div class="error__socials">
