Contact form init

--- a/html/404.html
+++ b/html/404.html
@@ -49,9 +49,9 @@
                 </div>
                 <div class="modal__content">
                     <h2>REPORT FORM</h2>
-                    <form action="#" class="modal__form">
-                        <input type="text" name="email" placeholder="Your email">
-                        <textarea name="text" placeholder="You feedback about the problem here..."></textarea>
+                    <form action="mail.php" class="modal__form" method="post" enctype="multipart/form-data">
+                        <input type="text" name="email" placeholder="Your email" required="required">
+                        <textarea name="text" placeholder="You feedback about the problem here..." required="required"></textarea>
                         <button>SEND</button>
                     </form>
                     <small>* This gives you first hand information about your broken links from your users and also a chance to build a rapport with the user via email.</small>
