--- a/documentation/index.html
+++ b/documentation/index.html
@@ -53,7 +53,7 @@
             <ul>
                 <li>High Resolution: Yes</li>
                 <li>Compatible Browsers: IE11, Firefox, Safari, Opera, Chrome, Edge</li>
-                <li>Files Included: HTML Files, CSS Files, JS Files</li>
+                <li>Files Included: HTML Files, CSS Files, JS Files, PHP Files</li>
                 <li>Columns: 1</li>
                 <li>Documentation: Well Documented</li>
                 <li>Layout: Responsive</li>
@@ -75,7 +75,8 @@
     ¦  +-- main.js
     +-- styles /
     ¦    +-- main.css
-    +-- 404.html</pre>
+    +-- 404.html
+    +-- MAIL.PHP</pre>
         </section>
         <!-- FILE STRUCTURE END -->
 
