--- a/documentation/index.html
+++ b/documentation/index.html
@@ -120,7 +120,7 @@
                     much simpler with an easy-to-use API that works across a multitude of browsers.
                 </li>
                 <li>
-                    <strong>main.js</strong> Contents javascripts code to initialize other js plugins and scripts.
+                    <strong>main.js</strong> Contents javascripts code to initialize other js plugins and functions
                 </li>
                 <li>
                     <strong>eyes.js</strong> The main script to draw eye on canvas.
